tests/valid_programs/fmt_string4.duck
fn main() {
    let x: String = f"String in {"String"} <- this is a string";
    std::io::println(x);
}
