tests/errors/typechecker/require_string_array_list_give_int.duck
fn main() {
    let x: std::col::ArrayList<String> = 5;
}
